--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,6 @@ body {
     height: 100%;
     overflow: hidden;
     background-color: rgb(248, 248, 248)!important;
-    padding: 20px;
 }
 
 * {
@@ -58,4 +57,23 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+}
+
+.html-tree .ant-tree-node-content-wrapper {
+    direction: rtl;
+}
+
+.html-tree .ant-tree-treenode {
+    height: 30px;
+    align-items: center;
+}
+
+.site-drawer-render-in-current-wrapper {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    padding: 48px;
+    text-align: center;
+    overflow: hidden;
+    border-radius: 2px;
 }
