--- a/src/component/QuickStyle/styles.module.sass
+++ b/src/component/QuickStyle/styles.module.sass
@@ -1,5 +1,8 @@
-.item 
-    display: inline-block;
-    background: white 
-    border-radius: 20px
-    border: 1px solid #eee
+.container 
+    position: relative
+    .item 
+        display: flex;
+        background: white 
+        border-radius: 20px
+        border: 1px solid #eee
+        flex-direction: column 
