--- a/src/component/Radio/styles.css
+++ b/src/component/Radio/styles.css
@@ -1,13 +1,18 @@
     .radioType2 {
-        border: 1px solid blue;
-        display: flex;
-        justify-content: space-between;
+        background: #eee;
         list-style: none;
+        display: inline-block;
+        font-size: 12px;
+        border-radius: 10px;
+        justify-content: space-around;
+        box-shadow: 0px 10px 15px -3px rgb(238, 238, 238);
     }
     
     .radioType2 li {
-        border: 1px solid blue;
-        width: 100%;
+        padding: 5px;
+        min-width: 40px;
+        border-radius: 10px;
+        display: inline-block;
         text-align: center;
     }
     
