--- a/src/styles.css
+++ b/src/styles.css
@@ -80,9 +80,12 @@ body {
 
 .html-tree {
     height: 50%;
-    border: 1px solid red;
 }
 
 .props-config-table {
     text-align: left!important;
+}
+
+ul {
+    margin: 0!important;
 }
