--- a/src/component/QuickStyle/styles.module.sass
+++ b/src/component/QuickStyle/styles.module.sass
@@ -1,8 +1,12 @@
 .container 
-    position: relative
-    .item 
-        display: flex;
-        background: white 
+    padding: 4px 
+    > div 
+        display: inline-flex 
+        align-items: center 
         border-radius: 20px
-        border: 1px solid #eee
-        flex-direction: column 
+        font-size: 14px
+        padding: 4px 8px
+        box-shadow: 0px 4px 40px 5px rgba(0,0,0,0.1)
+        background-color: white 
+        svg 
+            margin-left: 10px 
