To keep latest version

--- a/src/component/Editor/styles.module.sass
+++ b/src/component/Editor/styles.module.sass
@@ -1,16 +1,8 @@
-.editor 
-  counter-reset: line
-  border: 1px solid #ced4da
-  #codeArea 
-    outline: none
-    padding-left: 60px !important
-  pre 
-    padding-left: 60px !important
- .editorLineNumber 
-    position: absolute
-    left: 0px
-    color: #cccccc
-    text-align: right
-    width: 40px
-    font-weight: 100
-}
+.container 
+    position: relative
+    .copyButton 
+        position: absolute 
+        top: 20px
+        right: 80px 
+        z-index: 1
+        cursor: pointer 
