--- a/src/component/StyleSelectors/style.module.sass
+++ b/src/component/StyleSelectors/style.module.sass
@@ -1,14 +1,7 @@
 .container 
-    .top
-        display: flex
-        justify-content: space-between
-        align-items: center
-    .footer 
-        display: flex 
-        justify-content: center 
-        span 
-            display: block 
-            text-align: center 
+    padding: 16px 
+    margin: 8px 0 
+
     
 .iconUp 
     svg 
@@ -27,14 +20,33 @@
     display: flex 
     align-content: center
     background-color: white 
+    padding: 8px 
+    margin: 8px 0 
+.colorPickerHeader 
+    display: flex 
+    
 .label 
     padding-right: 20px 
 .textAlign 
+    display: flex 
+    align-items: center 
     .buttons
-        width: 100px
+        cursor: pointer
+        width: 140px
         background: #eee 
         display: flex 
         align-items: center 
         justify-content: space-between
+        border-radius: 10px 
+        padding: 4px 8px 
         .active
             background-color: white
+.content 
+    padding: 16px 
+
+.colorPickerBody 
+    background-color: white 
+    border-radius: 10px 
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1)
+
+    
