--- a/src/component/QuickStyle/styles.module.sass
+++ b/src/component/QuickStyle/styles.module.sass
@@ -1,12 +1,26 @@
 .container 
-    padding: 4px 
-    > div 
-        display: inline-flex 
-        align-items: center 
-        border-radius: 20px
-        font-size: 14px
-        padding: 4px 8px
-        box-shadow: 0px 4px 40px 5px rgba(0,0,0,0.1)
-        background-color: white 
-        svg 
-            margin-left: 10px 
+    background-color: white 
+    height: 50% 
+    border-top: 4px solid #eee 
+    border-right: 4px solid #eee 
+    padding: 12px 
+    .content 
+        display: flex 
+        flex-direction: column 
+        align-content: center 
+    .title 
+        background-color: #eee 
+        padding-left: 15px 
+    .item
+        padding: 4px 
+        > div 
+            display: inline-flex 
+            align-items: center 
+            border-radius: 20px
+            font-size: 14px
+            padding: 4px 8px
+            // box-shadow: 0px 4px 40px 5px rgba(0,0,0,0.1)
+            border: 1px solid #c7c7c7 
+            background-color: #f2f2f2  
+            svg 
+                margin-left: 10px 
