--- a/src/styles.css
+++ b/src/styles.css
@@ -1,68 +1,85 @@
-html,
-body {
-    height: 100%;
-    overflow: hidden;
-    background-color: rgb(248, 248, 248)!important;
-}
-
-* {
-    padding: 0;
-    margin: 0;
-}
-
-.item {
-    font-size: 14px;
-    padding: 8px;
-    /*border-top: 1px solid #eee;*/
-    /*border-bottom: 1px solid #eee;*/
-    border: 2px solid lightgray;
-    margin: 4px;
-    border-radius: 5px;
-    margin-top: 40px;
-    width: 220px;
-    font-size: 14px!important;
-}
-
-* {
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-.d-flex {
-    display: flex;
-}
-
-.space-around {
-    justify-content: space-between;
-}
-
-.top input {
-    width: 60%;
-    border: none;
-    border-bottom: 2px solid darkgray;
-    outline: none;
-}
-
-.ui-color-picker .preview-area,
-.input-group,
-.gradient-degree-value {
-    display: none!important;
-}
-
-.ui-color-picker .picker-area {
-    flex-direction: column-reverse!important;
-}
-
-.layout {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-}
-
-.props-config-table {
-    text-align: left!important;
-}
-
-ul {
-    margin: 0!important;
-}
+    html,
+    body {
+        background-color: rgb(248, 248, 248)!important;
+    }
+    
+    * {
+        padding: 0;
+        margin: 0;
+    }
+    
+    .item {
+        font-size: 14px;
+        padding: 8px;
+        /*border-top: 1px solid #eee;*/
+        /*border-bottom: 1px solid #eee;*/
+        border: 2px solid lightgray;
+        margin: 4px;
+        border-radius: 5px;
+        margin-top: 40px;
+        width: 220px;
+        font-size: 14px!important;
+    }
+    
+    * {
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+    
+    .d-flex {
+        display: flex;
+    }
+    
+    .space-around {
+        justify-content: space-between;
+    }
+    
+    .top input {
+        width: 60%;
+        border: none;
+        border-bottom: 2px solid darkgray;
+        outline: none;
+    }
+    
+    .ui-color-picker .preview-area,
+    .input-group,
+    .gradient-degree-value {
+        display: none!important;
+    }
+    
+    .ui-color-picker .picker-area {
+        flex-direction: column-reverse!important;
+    }
+    
+    .layout {
+        background-color: white;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    }
+    
+    .props-config-table {
+        text-align: left!important;
+    }
+    
+    ul {
+        margin: 0!important;
+    }
+    
+    .ace_editor,
+    .ace_editor * {
+        font-family: "Consolas", "Menlo", "Ubuntu Mono", "Droid Sans Mono", monospace !important;
+    }
+    
+    #text-editor {
+        width: unset!important;
+        height: calc(100vh - 40px)!important;
+    }
+    
+    .ui-color-picker {
+        width: unset!important;
+        margin: 0!important;
+    }
+    
+    .picker-area {
+        padding: 0!important;
+    }
