Latest update. Let's go for cleanup

--- a/src/component/HtmlTree/styles.module.sass
+++ b/src/component/HtmlTree/styles.module.sass
@@ -3,6 +3,7 @@
     height: 50% 
     background: white 
     border-right: 4px solid #eee 
+    overflow: scroll 
     .title 
         border-bottom: 1px solid #eee
         background: #eee 
