--- a/src/component/QuickStyle/styles.module.sass
+++ b/src/component/QuickStyle/styles.module.sass
@@ -4,6 +4,7 @@
     border-top: 4px solid #eee 
     border-right: 4px solid #eee 
     padding: 12px 
+    overflow: scroll 
     .content 
         display: flex 
         flex-direction: column 
