--- a/src/component/StylePannel/styles.module.css
+++ b/src/component/StylePannel/styles.module.css
@@ -1,6 +1,7 @@
 .container {
-    overflow: scroll;
-    height: 100vh;
+    height: 100%;
+    width: 300px;
+    overflow-y: scroll;
 }
 
 .input {}
