--- a/src/component/Editor/styles.module.sass
+++ b/src/component/Editor/styles.module.sass
@@ -1,8 +1,7 @@
 .container 
     position: relative
-    .copyButton 
+    svg 
         position: absolute 
         top: 20px
         right: 80px 
-        z-index: 1
         cursor: pointer 
