--- a/src/component/StyleSelectors/style.module.sass
+++ b/src/component/StyleSelectors/style.module.sass
@@ -1,5 +1,6 @@
+$selector-padding: 8px 16px 
 .container 
-    padding: 8px 16px 
+    padding: $selector-padding
 .alignCenter 
     display: flex 
     align-content: center 
@@ -21,8 +22,7 @@
     display: flex 
     align-content: center
     background-color: white 
-.colorPickerHeader 
-    display: flex 
+
     
 .label 
     padding-right: 20px 
@@ -44,12 +44,6 @@
     padding: 0 8px 
     margin-left: 8px 
     border-left: 1px solid darkgray 
-
-.colorPickerBody 
-    background-color: white 
-    border-radius: 10px 
-    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1)
-
 .header 
     display: flex 
     justify-content: space-between
