--- a/src/styles.css
+++ b/src/styles.css
@@ -57,10 +57,6 @@
         box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
     }
     
-    .props-config-table {
-        text-align: left!important;
-    }
-    
     ul {
         margin: 0!important;
     }
@@ -73,6 +69,7 @@
     #text-editor {
         width: unset!important;
         height: calc(100vh - 40px)!important;
+        line-height: 25px;
     }
     
     .ui-color-picker {
