Saving toady progress

--- a/src/component/HtmlTree/Action/styles.sass
+++ b/src/component/HtmlTree/Action/styles.sass
@@ -1,18 +1,18 @@
-.tree-item-action 
-    display: flex 
+.tree-item-action
+    display: flex
     width: 40px
-    justify-content: space-between 
-    align-items: center 
-    height: 100%  
-    margin-left: 50px;
+    justify-content: space-between
+    align-items: center
+    margin-left: 50px
     opacity: 0.2
-
-.ant-tree-treenode
-    &:hover 
-       background: #eee 
-       .tree-item-action
-           opacity: 1;
-
+.ant-tree-title
+    div
+        display: flex
+        align-items: center
+    &:hover
+        background: #eee
+        .tree-item-action
+            opacity: 1
 
 .ant-tree-show-line .ant-tree-switcher
-    background: unset!important 
+    background: unset!important
