--- a/src/component/HtmlTree/styles.module.sass
+++ b/src/component/HtmlTree/styles.module.sass
@@ -4,7 +4,12 @@
     background: white 
     border-right: 4px solid #eee 
     overflow: scroll 
-    .title 
+    .mainTitle  
         border-bottom: 1px solid #eee
         background: #eee 
         padding-left: 15px
+.title 
+    width: 100px
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
