--- a/src/component/PropConfig/styles.module.sass
+++ b/src/component/PropConfig/styles.module.sass
@@ -5,3 +5,8 @@
 .table 
     width: 100% 
     margin: 16px 0
+.error 
+    font-size: 14px 
+    color: red 
+    display: block 
+    margin-top: 16px 
