To keep progress

--- a/src/component/ColorPicker/styles.module.sass
+++ b/src/component/ColorPicker/styles.module.sass
@@ -1,4 +1,4 @@
-@import '../StyleSelectors/style.module.sass'
+@import '../Selectors/styles.module.sass'
 
 .container
     padding: $selector-padding
