--- a/src/styles.css
+++ b/src/styles.css
@@ -1,96 +1,97 @@
-    body {
-        background-color: rgb(248, 248, 248)!important;
-        overflow: hidden;
-    }
-    
-    * {
-        padding: 0;
-        margin: 0;
-    }
-    
-    .item {
-        font-size: 14px;
-        padding: 8px;
-        /*border-top: 1px solid #eee;*/
-        /*border-bottom: 1px solid #eee;*/
-        border: 2px solid lightgray;
-        margin: 4px;
-        border-radius: 5px;
-        margin-top: 40px;
-        width: 220px;
-        font-size: 14px!important;
-    }
-    
-    * {
-        font-family: 'Source Sans Pro', sans-serif;
-    }
-    
-    .d-flex {
-        display: flex;
-    }
-    
-    .space-around {
-        justify-content: space-between;
-    }
-    
-    .top input {
-        width: 60%;
-        border: none;
-        border-bottom: 2px solid darkgray;
-        outline: none;
-    }
-    
-    .ui-color-picker .preview-area,
-    .input-group,
-    .gradient-degree-value {
-        display: none!important;
-    }
-    
-    .ui-color-picker .picker-area {
-        flex-direction: column-reverse!important;
-    }
-    
-    .layout {
-        background-color: white;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-    }
-    
-    ul {
-        margin: 0!important;
-    }
-    
-    .ace_editor,
-    .ace_editor * {
-        font-family: "Consolas", "Menlo", "Ubuntu Mono", "Droid Sans Mono", monospace !important;
-    }
-    
-    #text-editor {
-        width: unset!important;
-        height: calc(100vh - 40px)!important;
-        line-height: 25px;
-    }
-    
-    .ui-color-picker {
-        width: unset!important;
-        margin: 0!important;
-    }
-    
-    .picker-area {
-        padding: 0!important;
-    }
-    
-    .main-container {
-        height: calc(100vh - 40px);
-        display: flex;
-    }
-    
-    div::-webkit-scrollbar {
-        width: 0.5em;
-    }
-    
-    div::-webkit-scrollbar-thumb {
-        background-color: rgb(131, 131, 131);
-        border-radius: 10px;
-    }
+body {
+    background-color: rgb(248, 248, 248) !important;
+    overflow: hidden;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+.item {
+    font-size: 14px;
+    padding: 8px;
+    /*border-top: 1px solid #eee;*/
+    /*border-bottom: 1px solid #eee;*/
+    border: 2px solid lightgray;
+    margin: 4px;
+    border-radius: 5px;
+    margin-top: 40px;
+    width: 220px;
+    font-size: 14px !important;
+}
+
+* {
+    font-family: "Source Sans Pro", sans-serif;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.space-around {
+    justify-content: space-between;
+}
+
+.top input {
+    width: 60%;
+    border: none;
+    border-bottom: 2px solid darkgray;
+    outline: none;
+}
+
+.ui-color-picker .preview-area,
+.input-group,
+.gradient-degree-value {
+    display: none !important;
+}
+
+.ui-color-picker .picker-area {
+    flex-direction: column-reverse !important;
+}
+
+.layout {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+}
+
+ul {
+    margin: 0 !important;
+}
+
+.ace_editor,
+.ace_editor * {
+    font-family: "Consolas", "Menlo", "Ubuntu Mono", "Droid Sans Mono",
+        monospace !important;
+}
+
+#text-editor {
+    width: unset !important;
+    height: calc(100vh - 40px) !important;
+    line-height: 25px;
+}
+
+.ui-color-picker {
+    width: unset !important;
+    margin: 0 !important;
+}
+
+.picker-area {
+    padding: 0 !important;
+}
+
+.main-container {
+    height: calc(100vh - 40px);
+    display: flex;
+}
+
+div::-webkit-scrollbar {
+    width: 0.5em;
+}
+
+div::-webkit-scrollbar-thumb {
+    background-color: rgb(131, 131, 131);
+    border-radius: 10px;
+}
