Refactoring, fixing sass indent issue, setting cursor to pointer for radio component

--- a/src/component/Radio/styles.module.sass
+++ b/src/component/Radio/styles.module.sass
@@ -1,12 +1,11 @@
-.big 
-    background: #eee  
+.big
+    background: #eee
     display: inline-block
-    padding: 2px;
+    padding: 2px
     border-radius: 10px
     box-shadow: 0px 10px 15px -3px rgb(238, 238, 238)
 
-
-.big li 
+.big li
     padding: 5px 15px
     font-size: 16px
     min-width: 50px;
@@ -14,26 +13,26 @@
     display: inline-block
     text-align: center
 
-
-.big .active 
+.big .active
     background-color: rgb(255, 255, 255)!important
     color: black
 
-.small 
+.small
     background: #eee
     display: inline-block
     font-size: 12px
-    border-radius: 10px;
+    border-radius: 10px
 
-.small li 
+.small li
     padding: 5px
     min-width: 40px
     border-radius: 10px
     display: inline-block
     text-align: center
 
-.small .active 
-    color: white;
+.small .active
+    color: white
     background-color: blue
-
-
+    
+.big, .small
+    cursor: pointer
