--- a/src/component/StylePanel/styles.module.sass
+++ b/src/component/StylePanel/styles.module.sass
@@ -2,6 +2,9 @@
     width: 300px
     padding: 5px 
     overflow-y: scroll
+    background: white 
+    position: relative
+    z-index: 1
 .message 
     margin-top: 200px
     padding: 40px 
