--- a/src/component/ComponentView/styles.module.sass
+++ b/src/component/ComponentView/styles.module.sass
@@ -4,4 +4,7 @@
         display: inline-block 
     *
         &:hover 
-            outline: 2px dashed #c9c9c9  
+            outline: 2px dashed
+.editInnerText 
+    background: inherit
+    width: 100% 
