--- a/src/component/ActiveStyles/styles.module.sass
+++ b/src/component/ActiveStyles/styles.module.sass
@@ -4,7 +4,7 @@
     border-top: 4px solid #eee 
     border-right: 4px solid #eee 
     padding: 12px 
-    overflow: scroll 
+    overflow: auto
     .content 
         display: flex 
         flex-direction: column 
