--- a/src/component/HtmlTree/styles.module.sass
+++ b/src/component/HtmlTree/styles.module.sass
@@ -3,7 +3,7 @@
     height: 50% 
     background: white 
     border-right: 4px solid #eee 
-    overflow: scroll 
+    overflow: auto 
     .mainTitle  
         border-bottom: 1px solid #eee
         background: #eee 
