--- a/src/component/StylePanel/styles.module.sass
+++ b/src/component/StylePanel/styles.module.sass
@@ -1,7 +1,7 @@
 .container 
     width: 300px
     padding: 5px 
-    overflow-y: scroll
+    overflow: auto
     background: white 
     position: relative
     z-index: 1
