--- a/src/component/ComponentView/styles.module.sass
+++ b/src/component/ComponentView/styles.module.sass
@@ -1,10 +1,29 @@
-.container  
-    cursor: pointer     
-    span 
-        display: inline-block 
-    *
-        &:hover 
-            outline: 2px dashed
-.editInnerText 
-    background: inherit
-    width: 100% 
+.container
+    
+    flex: 1 
+    display: flex 
+    overflow: auto
+    min-height: 100% 
+    max-height: 100%
+    padding: 16px 
+    min-width: 100%
+    .content 
+        margin: auto
+
+.wrapper 
+        width: 50% 
+        flex: 1
+        padding: 12px 
+        background: white;
+        height:  calc(100% - 60px)
+        
+
+.header 
+    height: 60px
+    display: flex 
+    background: #eee 
+    align-items: center 
+    padding: 0 16px
+    h2 
+        margin: 0!important  
+       
