--- a/src/component/ComponentView/styles.module.sass
+++ b/src/component/ComponentView/styles.module.sass
@@ -9,6 +9,11 @@
     min-width: 100%
     .content 
         margin: auto
+        *
+            cursor: pointer
+            &:hover 
+                outline: 2px dashed
+
 
 .wrapper 
         width: 50% 
