--- a/src/component/HtmlTree/Action/styles.sass
+++ b/src/component/HtmlTree/Action/styles.sass
@@ -1,14 +1,12 @@
 .tree-item-action
-    display: flex
+    display: inline-block 
     width: 40px
     justify-content: space-between
     align-items: center
-    margin-left: 50px
+    margin-left: 20px
     opacity: 0.2
 .ant-tree-title
     div
-        display: flex
-        align-items: center
     &:hover
         background: #eee
         .tree-item-action
