--- a/src/component/HtmlTree/styles.module.sass
+++ b/src/component/HtmlTree/styles.module.sass
@@ -9,7 +9,9 @@
         background: #eee 
         padding-left: 15px
 .title 
-    width: 100px
+    display: inline-block 
+
+    max-width: 100px
     white-space: nowrap
     overflow: hidden
     text-overflow: ellipsis
