--- a/src/component/ColorBox/styles.module.sass
+++ b/src/component/ColorBox/styles.module.sass
@@ -2,6 +2,7 @@
     background-image: url('../../assets/images/transparent.svg')   
     width: 30px
     height: 30px 
+    border: 1px solid darkgray 
     border-radius: 10px 
     overflow: hidden 
     cursor: pointer 
