--- a/src/component/ComponentView/styles.module.sass
+++ b/src/component/ComponentView/styles.module.sass
@@ -32,3 +32,12 @@
     h2 
         margin: 0!important  
        
+.editInnerText 
+    width: 100% 
+    background: transparent 
+    color: inherit
+    outline: none 
+    border: none 
+    &:hover 
+        outline: none!important
+
