--- a/src/component/HtmlTree/styles.module.sass
+++ b/src/component/HtmlTree/styles.module.sass
@@ -1,10 +1,10 @@
 .container 
-    padding: 12px  
     height: 50% 
     background: white 
     border-right: 4px solid #eee 
     overflow: auto 
-    .mainTitle  
+    padding: 12px
+    h2 
         border-bottom: 1px solid #eee
         background: #eee 
         padding-left: 15px
