--- a/src/component/StylePanel/styles.module.sass
+++ b/src/component/StylePanel/styles.module.sass
@@ -6,6 +6,8 @@
     background: white 
     position: relative
     z-index: 1
+    border-right: 4px solid #eee 
+
 .message 
     margin-top: 200px
     padding: 40px 
