--- a/src/component/ActiveStyles/styles.module.sass
+++ b/src/component/ActiveStyles/styles.module.sass
@@ -5,13 +5,10 @@
     border-right: 4px solid #eee 
     padding: 12px 
     overflow: auto
-    .content 
-        display: flex 
-        flex-direction: column 
-        align-content: center 
-    .title 
+    h2 
         background-color: #eee 
         padding-left: 15px 
+        font-size: 20px
     .item
         padding: 4px 
         > div 
