--- a/src/component/HtmlTree/styles.module.sass
+++ b/src/component/HtmlTree/styles.module.sass
@@ -4,14 +4,14 @@
     border-right: 4px solid #eee 
     overflow: auto 
     padding: 12px
-    h2 
+    h2
         border-bottom: 1px solid #eee
         background: #eee 
         padding-left: 15px
+        font-size: 20px
 .title 
     display: inline-block 
-
-    max-width: 100px
+    width: 100px
     white-space: nowrap
     overflow: hidden
     text-overflow: ellipsis
