--- a/src/component/Selectors/styles.module.sass
+++ b/src/component/Selectors/styles.module.sass
@@ -16,6 +16,7 @@ $selector-padding: 8px 16px
 .flex 
     display: flex
     justify-content: space-between 
+    align-items: center 
     div 
         width: 80% 
 .boxShadow 
@@ -25,7 +26,8 @@ $selector-padding: 8px 16px
 
     
 .label 
-    padding-right: 20px 
+    padding-right: 30px 
+    font-size: 13px
 .textAlign 
     display: flex 
     align-items: center 
