--- a/src/component/ComponentView/styles.module.sass
+++ b/src/component/ComponentView/styles.module.sass
@@ -9,7 +9,8 @@
     min-width: 100%
     .content 
         margin: auto
-        *
+        *   
+            all: revert
             cursor: pointer
             &:hover 
                 outline: 2px dashed
