--- a/src/component/HtmlTree/Action/styles.sass
+++ b/src/component/HtmlTree/Action/styles.sass
@@ -1,16 +1,14 @@
 .tree-item-action
-    display: inline-block 
+    display: flex
     width: 40px
     justify-content: space-between
     align-items: center
-    margin-left: 20px
+    margin-left: 50px
     opacity: 0.2
 .ant-tree-title
     div
+        display: flex
     &:hover
         background: #eee
         .tree-item-action
             opacity: 1
-
-.ant-tree-show-line .ant-tree-switcher
-    background: unset!important
