--- a/src/component/HtmlTree/styles.module.sass
+++ b/src/component/HtmlTree/styles.module.sass
@@ -2,7 +2,7 @@
     height: 50% 
     background: white 
     border-right: 4px solid #eee 
-    overflow: auto 
+    overflow: scroll 
     padding: 12px
     h2
         border-bottom: 1px solid #eee
