--- a/src/component/ComponentView/styles.module.sass
+++ b/src/component/ComponentView/styles.module.sass
@@ -1,21 +1,21 @@
-
 .wrapper 
-    display: block 
     flex: 1
     width: 0
     background: white
-    height:  calc(100%)
+    height:  100%
+    .header 
+        height: 60px
+        display: flex 
+        background: #eee 
+        align-items: center 
+        padding: 0 16px
+        h2 
+            margin: 0!important   
     .container
-        flex: 1 
         display: flex 
         overflow: scroll
         height: calc(100% - 60px)
-        min-height: calc(100%-60px) 
-        max-height: calc(100%-60px)
         padding: 16px 
-        min-width: 100%
-        max-width: 100%
-        width: 100%
         .content 
             margin: auto
             *   
@@ -25,7 +25,9 @@
                     outline: 2px dashed
             .editInnerText 
                 width: 100% 
-                background: transparent 
+                background: transparent
+                font-size: inherit
+                font-weight: inherit 
                 color: inherit
                 outline: none 
                 border: none 
@@ -36,14 +38,6 @@
 
         
 
-.header 
-    height: 60px
-    display: flex 
-    background: #eee 
-    align-items: center 
-    padding: 0 16px
-    h2 
-        margin: 0!important  
-       
+
 
 
