--- a/src/component/HtmlTree/styles.module.sass
+++ b/src/component/HtmlTree/styles.module.sass
@@ -1,14 +1,16 @@
 .container 
-    padding: 12px  
     height: 50% 
     background: white 
     border-right: 4px solid #eee 
     overflow: scroll 
-    .mainTitle  
+    padding: 12px
+    h2
         border-bottom: 1px solid #eee
         background: #eee 
         padding-left: 15px
+        font-size: 20px
 .title 
+    display: inline-block 
     width: 100px
     white-space: nowrap
     overflow: hidden
