--- a/src/component/StylePanel/styles.module.sass
+++ b/src/component/StylePanel/styles.module.sass
@@ -1,8 +1,7 @@
 .container 
     width: 300px
+    min-width: 300px 
     padding: 5px 
-    overflow-y: scroll
-.message 
-    margin-top: 200px
-    padding: 40px 
-    text-align: center 
+    overflow: auto
+    background: white 
+    border-right: 4px solid #eee 
