--- a/src/component/ActiveStyles/styles.module.sass
+++ b/src/component/ActiveStyles/styles.module.sass
@@ -4,14 +4,11 @@
     border-top: 4px solid #eee 
     border-right: 4px solid #eee 
     padding: 12px 
-    overflow: scroll 
-    .content 
-        display: flex 
-        flex-direction: column 
-        align-content: center 
-    .title 
+    overflow: auto
+    h2 
         background-color: #eee 
         padding-left: 15px 
+        font-size: 20px
     .item
         padding: 4px 
         > div 
