More options for Width / Height

--- a/src/component/Selectors/styles.module.sass
+++ b/src/component/Selectors/styles.module.sass
@@ -28,6 +28,10 @@ $selector-padding: 8px 16px
 .label 
     padding-right: 30px 
     font-size: 13px
+    display: block
+    width: 100%
+    padding: 6px 0
+    margin-bottom: 12px
 .textAlign 
     display: flex 
     align-items: center 
@@ -48,4 +52,5 @@ $selector-padding: 8px 16px
     border-left: 1px solid darkgray 
 .header 
     display: flex 
+    flex-direction: column
     justify-content: space-between
