Added text inputs for more precision

--- a/src/component/Selectors/styles.module.sass
+++ b/src/component/Selectors/styles.module.sass
@@ -29,9 +29,22 @@ $selector-padding: 8px 16px
     padding-right: 30px 
     font-size: 13px
     display: block
-    width: 100%
+    width: 50%
     padding: 6px 0
     margin-bottom: 12px
+.valueInput, .hexInput
+    width: 100% 
+    padding: 6px 12px 
+    border: 1px solid #ccc 
+    border-radius: 4px 
+    box-sizing: border-box 
+    margin-bottom: 12px 
+    font-size: 14px 
+    color: #555 
+    outline: none 
+    transition: all 0.3s 
+    &:focus 
+        border-color: #00bcd4
 .textAlign 
     display: flex 
     align-items: center 
