--- a/src/styles.sass
+++ b/src/styles.sass
@@ -4,10 +4,9 @@ html
 body
   background-color: rgb(248, 248, 248) !important
   overflow: hidden
-
-*
   padding: 0
   margin: 0
+
 
 .item
   font-size: 14px
@@ -19,8 +18,7 @@ body
   width: 220px
   font-size: 14px !important
 
-*
-  font-family: "Source Sans Pro", sans-serif
+
 
 .d-flex
   display: flex
@@ -46,8 +44,6 @@ body
   border-radius: 10px
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1)
 
-ul
-  margin: 0 !important
 
 .ace_editor
   font-family: "Consolas", "Menlo", "Ubuntu Mono", "Droid Sans Mono", monospace !important
@@ -72,17 +68,12 @@ ul
   display: flex
   align-content: stretch
 
-div
-  &::-webkit-scrollbar
-    width: 0.5em
-
-  &::-webkit-scrollbar-thumb
-    background-color: rgb(131, 131, 131)
-    border-radius: 10px
-
-  scrollbar-color: rgb(131, 131, 131) #eee
-  scrollbar-width: thin
-
+.scroll-bar-style 
+    &::-webkit-scrollbar
+      width: 4px
+    &::-webkit-scrollbar-thumb
+      background-color: rgb(131, 131, 131)
+    
 .export-button
   position: fixed
   right: 50px
