Commit to keep the progress

--- a/src/component/ComponentView/styles.module.sass
+++ b/src/component/ComponentView/styles.module.sass
@@ -6,6 +6,7 @@
     .header 
         height: 60px
         display: flex 
+        justify-content: space-between
         background: #eee 
         align-items: center 
         padding: 0 16px
@@ -14,7 +15,7 @@
     .container
         display: flex 
         overflow: scroll
-        height: calc(100% - 60px)
+        height: calc(100% - 40px)
         padding: 16px 
         .content 
             margin: auto
