--- a/src/component/Header/styles.module.sass
+++ b/src/component/Header/styles.module.sass
@@ -1,8 +1,12 @@
-$bg : #4f4f4f  
 .header 
-    background-color: $bg 
-    padding: 10px
+    background-color: #4f4f4f
+    height: 30px
+    display: flex
+    align-items: center
+    direction: rtl
     a 
+        display: flex
+        align-items: center
         text-decoration: none
         color: lightblue
         font-size: 12px
