--- a/src/component/ComponentView/styles.module.sass
+++ b/src/component/ComponentView/styles.module.sass
@@ -13,10 +13,10 @@
             margin: 0!important   
     .container
         display: flex 
-        overflow: scroll
-        height: calc(100% - 60px)
-        padding: 16px 
+        overflow: auto
+        height: calc(100% - 40px)
         .content 
+            padding: 16px
             margin: auto
             *   
                 all: revert
@@ -32,12 +32,3 @@
                 outline: none 
                 border: none 
                 &:hover 
-                    outline: none!important
-
-
-
-        
-
-
-
-
