--- a/src/component/Selectors/styles.module.sass
+++ b/src/component/Selectors/styles.module.sass
@@ -1,6 +1,7 @@
 $selector-padding: 8px 16px 
 .container 
     padding: $selector-padding
+
 .alignCenter 
     display: flex 
     align-content: center 
@@ -31,6 +32,7 @@ $selector-padding: 8px 16px
 .textAlign 
     display: flex 
     align-items: center 
+    justify-content: space-between;
     .buttons
         cursor: pointer
         width: 140px
@@ -49,3 +51,4 @@ $selector-padding: 8px 16px
 .header 
     display: flex 
     justify-content: space-between
+    align-items: center
