--- a/src/component/Header/styles.module.sass
+++ b/src/component/Header/styles.module.sass
@@ -1,36 +1,16 @@
-$bg : #4f4f4f  
-$header-height: 40px 
 .header 
-    background-color: $bg 
-    height: $header-height
-    display: flex 
-    align-items: center 
-    padding: 0 32px 
-    > a 
-        margin: 0 16px 
-    .github 
-        width: $header-height * 2
-        height: $header-height * 2
-        background-color: $bg 
-        border-radius: 50px   
-        display: flex 
-        align-items: center 
-        justify-content: center 
-        position: absolute 
-        right: 50px 
-        top: 0 
-        &:before
-            content: '💖'
-            position: absolute
-            transition: 200ms 
-            font-size: 12px 
-            opacity: 0
-        &:hover 
-            cursor: pointer 
-            &::before
-                opacity: 1                 
-                margin-top: 150px  
-                font-size: 35px 
-
-            
+    background-color: #4f4f4f
+    height: 30px
+    display: flex
+    align-items: center
+    direction: rtl
+    a 
+        display: flex
+        align-items: center
+        text-decoration: none
+        color: lightblue
+        font-size: 12px
+        margin-right: 14px
+    
+   
         
