--- a/src/component/Sider/styles.module.sass
+++ b/src/component/Sider/styles.module.sass
@@ -1,13 +1,17 @@
 .siderControl 
     position: absolute 
     top: calc(50% - 30px)
-    width: 35px
+    width: 60px
     height: 60px 
     display: flex 
     right: -34px
     align-items: center 
     justify-content: center  
-    z-index: 0
     cursor: pointer
-    transition: 200ms 
     border: 1px solid #c4c4c4  
+    background: white
+    border-radius: 10px
+    transform: rotate(-45deg)
+    svg 
+        transform: rotate(45deg)
+
