Add background pattern to component view

--- a/src/component/ComponentView/styles.module.sass
+++ b/src/component/ComponentView/styles.module.sass
@@ -15,8 +15,11 @@
         display: flex 
         overflow: auto
         height: calc(100% - 40px)
+        opacity: 1;
+        background-image: radial-gradient(#d2d2d2 1.35px, #ffffff 1.35px);
+        background-size: 27px 27px;
+        padding: 16px
         .content 
-            padding: 16px
             margin: auto
             *   
                 all: revert
