Add: Support for image

--- a/src/component/ComponentView/styles.module.sass
+++ b/src/component/ComponentView/styles.module.sass
@@ -14,6 +14,7 @@
     .container
         display: flex 
         overflow: auto
+        position: relative
         height: calc(100% - 40px)
         opacity: 1
         background-image:  linear-gradient(#f3f3f3 2.2px, transparent 2.2px), linear-gradient(90deg, #f3f3f3 2.2px, transparent 2.2px), linear-gradient(#f3f3f3 1.1px, transparent 1.1px), linear-gradient(90deg, #f3f3f3 1.1px, #ffffff 1.1px)
