--- a/src/component/Selectors/styles.module.sass
+++ b/src/component/Selectors/styles.module.sass
@@ -1,6 +1,6 @@
 $selector-padding: 8px 16px 
 .container 
-    padding: $selector-padding
+    // padding: $selector-padding
 
 .alignCenter 
     display: flex 
