--- a/src/component/Sider/styles.module.sass
+++ b/src/component/Sider/styles.module.sass
@@ -2,6 +2,7 @@
     position: absolute 
     top: calc(50% - 30px)
     width: 60px
+    z-index: 1
     height: 60px 
     display: flex 
     right: -34px
